# crispypp

./: CMakeLists.txt  README.md  banana-logs.txt  main.cpp  some_text.txt
crispypp/: addexceptions.hpp  all.hpp  bananalogger.hpp  ctypes.hpp  htmlgen.hpp  incodevm.hpp  smartfile.hpp  smartstring.hpp  webserver.hpp
example/: bananalogger.cpp  ctypes.cpp  htmlgen.cpp  incodevm.cpp  smartfile.cpp  smartstring.cpp
